fixed broken links

--- a/smart/source/light/login.html
+++ b/smart/source/light/login.html
@@ -7,7 +7,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<meta name="description" content="Responsive Admin Template" />
 	<meta name="author" content="RedstarHospital" />
-	<title>Smart University | Bootstrap Responsive Admin Template</title>
+	<title>Nurtures academy | login</title>
 	<!-- google font -->
 	<link href="../../../../../fonts.googleapis.com/css_2.css" rel="stylesheet"
 		type="text/css" />
