--- a/smart/source/light/parent-dashboard.html
+++ b/smart/source/light/parent-dashboard.html
@@ -481,8 +481,8 @@
 										</li>
 										<li class="dropdown"><a href="#">Check exams</a>
 											<ol>
-												<li><a href="#">terminal examination</a></li>
-												<li><a href="#">sessional examination</a></li>
+												<li><a href="reportcard.html">terminal examination</a></li>
+												<li><a href="reportcard.html">sessional examination</a></li>
 											</ol>
 										</li>
 
