third fixing commit

--- a/smart/source/light/parent-dashboard.html
+++ b/smart/source/light/parent-dashboard.html
@@ -341,7 +341,7 @@
 								</a>
 								<ul class="sub-menu">
 									<li class="nav-item">
-										<a href="all_courses.html" class="nav-link "> <span class="title">All
+										<a href="#" class="nav-link "> <span class="title">All
 												Subjects</span>
 										</a>
 									</li>
@@ -355,12 +355,12 @@
 								</a>
 								<ul class="sub-menu">
 									<li class="nav-item">
-										<a href="all_department.html" class="nav-link "> <span class="title">Half term
+										<a href="test.html" class="nav-link "> <span class="title">Half term
 												report</span>
 										</a>
 									</li>
 									<li class="nav-item">
-										<a href="all_department.html" class="nav-link "> <span class="title">All
+										<a href="test.html" class="nav-link "> <span class="title">All
 												test results</span>
 										</a>
 									</li>
@@ -375,20 +375,20 @@
 								</a>
 								<ul class="sub-menu">
 									<li class="nav-item">
-										<a href="basic_table.html" class="nav-link ">
+										<a href="reportcard.html" class="nav-link ">
 											<span class="title">Terminal Results</span>
 										</a>
 									</li>
 									<li class="nav-item">
-										<a href="advanced_table.html" class="nav-link ">
+										<a href="reportcard.html" class="nav-link ">
 											<span class="title">Sessional Results</span>
 										</a>
 									</li>
-									<li class="nav-item">
+									<!-- <li class="nav-item">
 										<a href="tableData.html" class="nav-link ">
 											<span class="title">Tables With Sourced Data</span>
 										</a>
-									</li>
+									</li> -->
 								</ul>
 							</li>
 						</ul>
